--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -4,6 +4,7 @@
   align-items: center;
   width: 100%;
   margin-bottom: 1.5rem;
+  margin-top: 3rem;
   border-radius: 1rem;
   overflow: hidden;
 }
@@ -92,6 +93,7 @@
 @media (min-width: 768px) {
   .dashboard-header {
     padding-left: 1rem;
+    margin-top: 0;
   }
 
   .dashboard-header__left {
