--- a/src/components/healthStatusCards/healthStatusCards.css
+++ b/src/components/healthStatusCards/healthStatusCards.css
@@ -1,7 +1,6 @@
 .health-status-cards {
   display: flex;
   flex-direction: column;
-
   gap: 1rem;
 }
 
@@ -11,7 +10,6 @@
   align-items: center;
   background-color: var(--color-light);
   border-radius: 1.5rem;
-
   width: 14rem;
   padding: 1.5rem 2rem;
 }
@@ -68,6 +66,5 @@
 .health-status-card .bar-fill {
   height: 100%;
   width: 70%;
-  background-color: var(--color-accent);
   border-radius: 0.5rem 0 0 0.5rem;
 }
