--- a/src/components/simpleAppointmentCard/simpleAppointmentCard.css
+++ b/src/components/simpleAppointmentCard/simpleAppointmentCard.css
@@ -57,7 +57,7 @@
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
   .appointment-card {
-    padding: 1.7rem;
+    padding: 1.4rem;
     border-radius: 2.5rem;
   }
 
@@ -71,8 +71,8 @@
   }
 
   .appointment-card__icon {
-    width: 1.7rem;
-    height: 1.7rem;
+    width: 1.5rem;
+    height: 1.5rem;
   }
 
   .appointment-card__time,
@@ -84,6 +84,6 @@
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
   .appointment-card {
-    min-width: 250px;
+    min-width: 200px;
   }
 }
